Fix: Overlapping first feed entry

--- a/src/styles.module.css
+++ b/src/styles.module.css
@@ -10,6 +10,7 @@ body {
 	background: #111;
 	color: #fbfbfe;
 	height: 100%;
+	margin: 0;
 }
 
 * {
